syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.example.grpc.protodefine";

import "dataType.proto";

package com.example.grpc.protodefine;

service SunService {

	rpc SayHello  (CommonRequest) returns (CommonResponse) {}


}

